# orbital

./: CMakeLists.txt
client/: CMakeLists.txt  cairo-util.c  desktop-shell.c  image-loader.c  window.c  window.h
cmake/: FindCairo.cmake
protocol/: desktop-shell.xml
src/: CMakeLists.txt  animation.cpp  animation.h  animationcurve.h  desktop-shell.cpp  desktop-shell.h  effect.h  layer.cpp  layer.h  pager.cpp  pager.h  shell.cpp  shell.h  shellsurface.cpp  shellsurface.h  transform.cpp  transform.h  utils.h  workspace.cpp  workspace.h
src/effects/: griddesktops.cpp  scaleeffect.cpp  scaleeffect.h
